id fixes, alignment fixes

--- a/src/main/resources/com/example/financecontrol/main-styles.css
+++ b/src/main/resources/com/example/financecontrol/main-styles.css
@@ -68,7 +68,6 @@
 }
 #themeBt{
     -fx-background-color: none;
-    -fx-background-image: url("sun.png");
     -fx-background-size: 115 64;
     -fx-background-repeat: no-repeat;
     -fx-background-position:center;
